--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -4,6 +4,6 @@ services:
   pytorch-training:
     build: .
     volumes:
-      - ../data:/data
+      - ../data:/app/data
       - ../checkpoints:/app/voc
     runtime: nvidia
